<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center">


    <include layout = "@layout/toolbar"/>


    <!-- Botón Juegos -->
    <LinearLayout
        android:id="@+id/btnJuegos"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_button_background"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_juegos"
            android:contentDescription="@string/titulo_juegos" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_juegos"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>


    <!-- Botón Estadísticas -->
    <LinearLayout
        android:id="@+id/btnEstadisticas"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_button_background"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_estadisticas"
            android:contentDescription="@string/titulo_estadisticas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_estadisticas"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Botón Notificaciones -->
    <LinearLayout
        android:id="@+id/btnNotificaciones"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_button_background"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_notificaciones"
            android:contentDescription="@string/titulo_notificaciones" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_notificaciones"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />




    </LinearLayout>

</LinearLayout>
